--- a/.github/workflows/manage-git-settings.yaml
+++ b/.github/workflows/manage-git-settings.yaml
@@ -15,7 +15,7 @@ on:
 
 jobs:
   manage-git-settings:
-    runs-on: sentinel-general-use-runner
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
         with:
